Corrigindo layout e saida para Eventos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <activity
             android:name=".EventosActivity"
             android:label="@string/title_activity_eventos"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".IgrejasActivity"
             android:label="@string/title_activity_igrejas"
