--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jorda.igrejasonline">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/igrejaiconbrancog"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
@@ -37,6 +39,12 @@
             android:name=".CadEventoActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".EdEventoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ExEventoActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".CadLocalActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -55,6 +63,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".CadIgrejaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".EdIgrejaActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ExIgrejaActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".CadEnderecoActivity"
